syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.springframework.data.remote.vertx.proto";
option java_outer_classname = "RemoteDataProto";

package remotedata;

// Request messages for event bus communication

message GetByIdRequest {
  string resource_name = 1;
  string id = 2;
  map<string, string> parameters = 3;
}

message GetAllRequest {
  string resource_name = 1;
  map<string, string> parameters = 2;
}

message SaveRequest {
  string resource_name = 1;
  string id = 2; // Empty for new entities
  string entity_json = 3; // Entity serialized as JSON
  map<string, string> parameters = 4;
}

message DeleteRequest {
  string resource_name = 1;
  string id = 2;
  map<string, string> parameters = 3;
}

message ExistsRequest {
  string resource_name = 1;
  string id = 2;
  map<string, string> parameters = 3;
}

message CountRequest {
  string resource_name = 1;
  map<string, string> parameters = 2;
}

// Response messages

message EntityResponse {
  bool success = 1;
  int32 status_code = 2;
  string entity_json = 3; // Entity serialized as JSON
  string error_message = 4;
  map<string, string> metadata = 5;
}

message EntityListResponse {
  bool success = 1;
  int32 status_code = 2;
  repeated string entities_json = 3; // List of entities serialized as JSON
  string error_message = 4;
  map<string, string> metadata = 5;
}

message DeleteResponse {
  bool success = 1;
  int32 status_code = 2;
  string error_message = 3;
  map<string, string> metadata = 4;
}

message ExistsResponse {
  bool success = 1;
  int32 status_code = 2;
  bool exists = 3;
  string error_message = 4;
  map<string, string> metadata = 5;
}

message CountResponse {
  bool success = 1;
  int32 status_code = 2;
  int64 count = 3;
  string error_message = 4;
  map<string, string> metadata = 5;
}
